turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:15: error: type mismatch;
 found   : Int(0)
 required: java.awt.Color
      setCouleurBrosse(0)
                       ^LangtonsAnt:26: error: type mismatch;
 found   : Int(0)
 required: java.awt.Color
      setCouleurBrosse(0)
                       ^